## 0.x.x / 2019-xx-xx

* Pass as additional measuring data the queued time to the concurrencylimit limiters. 
* Add metrics of the number of executing funcs on concurrencylimit.
* Add metrics of queued time on concurrencylimit.

## 0.2.0 / 2019-03-02

* Add Adaptive LIFO with CoDel executor to concurrencylimit.
* Add LIFO executor to concurrencylimit.
* Add AIMD limiter to concurrencylimit.
* Add concurrencylimit Runner for adaptive runners.

## 0.1.0 / 2018-12-17

* Added custom error type to know where the error comes from (library or outside).
* Added chain of Runner middlewares.
* Measure retry, bulkhead, timeout, failure injector, circuit breaker and command exection.
* Added metrics recorder through the execution context.
* Added failure injector.
* Added circuit breaker.
* Added bulkhead.
* Added retry.
* Added timeout.
* Added execution API.