@@ -1,6 +1,7 @@
 package execute
 
 import (
+	"context"
 	"time"
 
 	"github.com/slok/goresilience/errors"
@@ -68,7 +69,7 @@ func NewAdaptiveLIFOCodel(cfg AdaptiveLIFOCodelConfig) Executor {
 	return a
 }
 
-func (a *adaptiveLIFOCodel) Execute(f func() error) error {
+func (a *adaptiveLIFOCodel) Execute(_ context.Context, f func() error) error {
 	var timeout time.Duration
 	// If we are congested then we need to change de queuing policy to LIFO
 	// and set the congestion timeout to the aggressive CoDel timeout.
