@@ -2,6 +2,8 @@
 
 package mocks
 
+import context "context"
+
 import mock "github.com/stretchr/testify/mock"
 
 // Executor is an autogenerated mock type for the Executor type
@@ -9,13 +11,13 @@ type Executor struct {
 	mock.Mock
 }
 
-// Execute provides a mock function with given fields: f
-func (_m *Executor) Execute(f func() error) error {
-	ret := _m.Called(f)
+// Execute provides a mock function with given fields: ctx, f
+func (_m *Executor) Execute(ctx context.Context, f func() error) error {
+	ret := _m.Called(ctx, f)
 
 	var r0 error
-	if rf, ok := ret.Get(0).(func(func() error) error); ok {
-		r0 = rf(f)
+	if rf, ok := ret.Get(0).(func(context.Context, func() error) error); ok {
+		r0 = rf(ctx, f)
 	} else {
 		r0 = ret.Error(0)
 	}
